--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,18 @@
     <title>Number-Guesser</title>
 </head>
 <body>
-    <div class="navbar">
-        <button class="btn">Reset</button>
-        <input type="color" value="#00eeff" class="color">
-    </div>
-    <div class="wrapper">
-    <div class="container column">
-    </div>
-    <h1 style="color:#00eeff"id="a" class="column">{{ prediction_text }}</h1>
+    
+    <div>
+        <h3 class="main-title">NUMBER OTR</h3>
+        <div class="navbar">
+            <button class="btn">Reset</button>
+            <input type="color" value="#00eeff" class="color">
+        </div>
+        <div class="wrapper">
+        <div class="container column">
+        </div>
+        <h1 style="color:#00eeff"id="a" class="column">{{ prediction_text }}</h1>
+        </div>
     </div>
     <script src="../static/main.js"></script>
 </body>
