--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div>
-        <h3 class="main-title">NUMBER OTR</h3>
+        <h3 class="main-title">NUMBER GUESSER</h3>
         <div class="navbar">
             <button class="btn">Reset</button>
             <input type="color" value="#00eeff" class="color">
